--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 
 * {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
     width: 414px;
     height: 896px;
     position: relative;
-    
+
 }
+
 .main {
     display: flex;
     flex-direction: column;
@@ -22,29 +23,30 @@
 
 .main h1 {
     color: white;
-    font-size: 120px; 
-    font-family: Roboto; 
+    font-size: 120px;
+    font-family: Roboto;
     font-weight: 300;
 }
 
 .main h2 {
     color: white;
-    font-size: 34px; 
-    font-family: Roboto; 
+    font-size: 34px;
+    font-family: Roboto;
     font-weight: 300;
 }
 
 .main p {
     color: white;
-    font-size: 22px; 
-    font-family: Roboto; 
+    font-size: 22px;
+    font-family: Roboto;
     font-weight: 300;
 }
-nav{
+
+nav {
     margin-bottom: 70px;
 }
 
-.main > img {
+.main>img {
     position: absolute;
     top: 64px;
     right: 26px;
@@ -54,7 +56,7 @@ nav{
 }
 
 .containerTime {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     padding-top: 20px;
 }
@@ -63,7 +65,7 @@ nav{
     background-color: #757AFF;
     width: 100px;
     height: 100px;
-    display:flex;
+    display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
@@ -76,13 +78,25 @@ nav{
 
 /* css for containerSub */
 
-.subMain{
+.subMain {
     display: flex;
-    flex-direction: column;
-    padding: 60px 30px 30px 30px ;
+    flex-direction: row;
+    padding: 60px 30px 30px 30px;
 }
 
-.subMain .containerSubRow{
+.subMain img {
+    height: auto;
+    max-width: 28px;
+
+}
+
+.subRow {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.subMain .containerSubRow {
     display: flex;
     justify-content: space-between;
     height: 56px;
