--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@
 }
 
 .container {
-    width: 414px;
     height: 896px;
     position: relative;
-
 }
 
 .main {
@@ -17,7 +15,7 @@
     flex-direction: column;
     height: 460px;
     background: linear-gradient(135deg, #8589FF 0%, #E8E9FF 100%);
-    clip-path: ellipse(150% 100% at 50% 0%);
+    clip-path: ellipse(130% 100% at 50% 0%);
     padding: 30px;
 }
 
@@ -59,6 +57,7 @@ nav {
     display: flex;
     justify-content: space-between;
     padding-top: 20px;
+    max-width: 414px;
 }
 
 .action-button {
@@ -81,6 +80,8 @@ nav {
 .subMain {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-self:stretch;
     padding: 60px 30px 30px 30px;
 }
 
@@ -91,16 +92,10 @@ nav {
 }
 
 .subRow {
-    display: flex;
+    display:flex;
     flex-direction: column;
-
-}
-
-.subMain .containerSubRow {
-    display: flex;
     justify-content: space-between;
-    height: 56px;
-    align-items: center;
+    gap: 20px;
 }
 
 .subMain p {
@@ -108,5 +103,44 @@ nav {
     font-size: 20px;
     font-family: Roboto;
     font-weight: 400;
-    width: 100px;
 }
+
+.subMain .wrapper {
+    display: flex;
+    gap: 50px;
+}
+
+
+/* media queries */
+
+@media only screen and (min-width: 600px) {
+    /* For tablet: */
+    .main {
+      padding: 30px 50px 30px 50px;
+    }
+    .subMain {
+        padding: 60px 50px 30px 50px;
+    }
+    .action-button {
+        right: 50px;
+    }
+    .main>img {
+        right: 50px;
+    }
+  }
+
+  @media only screen and (min-width: 1000px) {
+    /* For desktop: */
+    .main {
+      padding: 30px 300px 30px 300px;
+    }
+    .subMain {
+        padding: 60px 300px 30px 300px;
+    }
+    .action-button {
+        right: 300px;
+    }
+    .main>img {
+        right: 300px;
+    }
+  }
